--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 
     <section id="home">
         <img src="./img/logo.png" class="playermade" />
+        <div class="home-image">
+
+        </div>
     </section>
 
     <section id="Become-Member">
