--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
 
     <section id="home">
         <img src="./img/logo.png" class="playermade" />
-        <!-- <div class="home-image">
-
-        </div> -->
+        <p class="texty">Playermade is an exclusive training club that specializes in the delivery of sports related training specific to juniors</p>
     </section>
 
     <section id="Become-Member">
