--- a/index.html
+++ b/index.html
@@ -24,32 +24,34 @@
         </nav>
     </header>
 
-    <section id="home" data-module-id="screen">
-        <img src="./img/logo.png" class="playermade" />
-        <div class="layout">
-            <div class="screen__content" data-context-text="Playermade">
-                <div class="container-content">
-                    <p class="text">Playermade is an exclusive training club that specializes in the delivery of sports related training specific to juniors</p>
+    <main id="content" tabindex="-1">
+
+        <section id="home" data-module-id="screen">
+            <img src="./img/logo.png" class="playermade" />
+            <div class="layout">
+                <div class="screen__content content flex flex--middle" data-context-text="Playermade">
+                    <div class="container-content cell">
+                        <p class="text">Playermade is an exclusive training club that specializes in the delivery of sports related training specific to juniors</p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <section id="Become-Member">
-    </section>
+        <section id="Become-Member">
+        </section>
 
-    <section id="Movement-Screen">
-    </section>
+        <section id="Movement-Screen">
+        </section>
 
-    <section id="Specialist-Training">
-    </section>
+        <section id="Specialist-Training">
+        </section>
 
-    <section id="Abstract">
-    </section>
+        <section id="Abstract">
+        </section>
 
-    <section id="Contact">
-    </section>
-
+        <section id="Contact">
+        </section>
+    </main>
     <footer class="footer">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2422.4957390967716!2d-1.1213161846456399!3d52.614885036946035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48776133a88e00b5%3A0xf97700213bbe7274!2sPlayermade!5e0!3m2!1sen!2suk!4v1579976390244!5m2!1sen!2suk"
             width="100%" frameborder="0" style="border:0;" allowfullscreen="">
