movement screen card with buy button

--- a/index.html
+++ b/index.html
@@ -28,19 +28,26 @@
 
         <section id="home" data-module-id="screen">
             <img src="./img/logo.png" class="playermade" />
-            <div class="layout">
-                <div class="screen__content content flex flex--middle" data-context-text="Playermade">
-                    <div class="container-content cell">
-                        <p class="text">Playermade is an exclusive training club that specializes in the delivery of sports related training specific to juniors</p>
-                    </div>
-                </div>
-            </div>
+            <p class="text">Playermade is an exclusive training club that specializes in the delivery of sports related training specific to juniors</p>
         </section>
 
         <section id="Become-Member">
         </section>
 
         <section id="Movement-Screen">
+            <div class="card">
+                <div class="card-image"></div>
+                <div class="card-text">
+                    <h2>Movement Screen</h2>
+                    <p> &bull; Begin the process of membership by booking your movement screen today. This self-devised assessment, provides us as coaches with invaluable knowledge about a player’s current level of performance and their potential risk and
+                        cause of injury. </p>
+                    <p> &bull; Players, parents and coaches will receive instant feedback regarding the quality and capacity of the players movement, along with any recommendations, advice and next steps regarding future training options.</p>
+                    <p> Book Your Screening Now!</p>
+                </div>
+                <a href="https://user.playermade.co.uk/signup?productid=19">
+                    <button type="button" class="btn btn-success btn-lg">BUY NOW</button>
+                </a>
+            </div>
         </section>
 
         <section id="Specialist-Training">
