text for 2nd page

--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
         </section>
 
         <section id="Become-Member">
+            <div class="Member-text">
+                <h1>SCREEN</h1>
+                <p>Identify your individual training needs, goals and pathway for future training through our in-house sports related strength and movement screen</p>
+                <h1>TRAIN</h1>
+                <p>Chose the most suited and convenient means of training, whether that be through our weekly small group training system or bespoke 1:1 coaching</p>
+                <h1>GAME</h1>
+                <p>Take all that you have worked on into your game, showing higher levels of performance week in week out</p>
+            </div>
         </section>
 
         <section id="Movement-Screen">
