--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
                 <li class="menu-item"><a href="#Specialist-Training" data-scroll>Specialist Training</a></li>
                 <li class="menu-item"><a href="#Abstract" data-scroll>Abstract</a></li>
                 <li class="menu-item"><a href="#Contact" data-scroll>Contact Us</a></li>
+                <!-- <li class="menu-item"><a href="https://user.playermade.co.uk" data-scroll>Login</a></li> -->
             </ul>
         </nav>
     </header>
 
-    <main id="content" tabindex="-1">
+    <main>
 
         <section id="home" data-module-id="screen">
             <img src="./img/logo.png" class="playermade" />
@@ -33,12 +34,21 @@
 
         <section id="Become-Member">
             <div class="Member-text">
-                <h1>SCREEN</h1>
-                <p>Identify your individual training needs, goals and pathway for future training through our in-house sports related strength and movement screen</p>
-                <h1>TRAIN</h1>
-                <p>Chose the most suited and convenient means of training, whether that be through our weekly small group training system or bespoke 1:1 coaching</p>
-                <h1>GAME</h1>
-                <p>Take all that you have worked on into your game, showing higher levels of performance week in week out</p>
+                <div class="border-box">
+                    <h1>SCREEN</h1>
+                    <hr />
+                    <p>Identify your individual training needs, goals and pathway for future training through our in-house sports related strength and movement screen</p>
+                </div>
+                <div class="border-box">
+                    <h1>TRAIN</h1>
+                    <hr/>
+                    <p>Chose the most suited and convenient means of training, whether that be through our weekly small group training system or bespoke 1:1 coaching</p>
+                </div>
+                <div class="border-box">
+                    <h1>GAME</h1>
+                    <hr/>
+                    <p>Take all that you have worked on into your game, showing higher levels of performance week in week out</p>
+                </div>
             </div>
         </section>
 
