--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             <div class="card">
                 <div class="card-text">
                     <h2>Movement Screen</h2>
-                    <p> &bull; Begin the process of membership by booking your movement screen today. This self-devised assessment, provides us as coaches with invaluable knowledge about a player’s current level of performance and their potential risk and
+                    <p> Begin the process of membership by booking your movement screen today. This self-devised assessment, provides us as coaches with invaluable knowledge about a player’s current level of performance and their potential risk and
                         cause of injury. </p>
-                    <p> &bull; Players, parents and coaches will receive instant feedback regarding the quality and capacity of the players movement, along with any recommendations, advice and next steps regarding future training options.</p>
+                    <p> Players, parents and coaches will receive instant feedback regarding the quality and capacity of the players movement, along with any recommendations, advice and next steps regarding future training options.</p>
                     <p> Book Your Screening Now!</p>
                     <a href="https://user.playermade.co.uk/signup?productid=19">
                         <button type="button" class="btn btn-success btn-lg">BUY NOW</button>
@@ -76,8 +76,8 @@
             <div class="Training-text">
                 <p>With performance at the center of everything we do here, there is also an opportunity for individuals or sports teams who wish to access something even more bespoke and personalised to access something even more specific.</p>
                 <p>1:1 Training Provides the opportunity for players to focus their training in one or more specific areas:</p>
-                <p>&bull; Injury Prevention/Rehabilitation &bull; Speed and Explosiveness &bull; Reactiveness and Agility &bull; Endurance and Fitness</p>
-                <p>Skills; areas: &bull; Striking, kicking and punching &bull; Throwing and Bowling &bull; Any football related specific skill</p>
+                <p>Injury Prevention/Rehabilitation &bull; Speed and Explosiveness &bull; Reactiveness and Agility &bull; Endurance and Fitness</p>
+                <p>Skills; areas: Striking, kicking and punching &bull; Throwing and Bowling &bull; Any football related specific skill</p>
                 <h2>Team Training</h2>
                 <p>Complement your team training with this professional standard of performance based training. Experience a level of training that is relevant and expected from all major sports clubs around the world.</p>
             </div>
