--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             <div class="card">
                 <div class="card-text">
                     <h2>Movement Screen</h2>
-                    <p> &bull; Begin the process of membership by booking your movement screen today. This self-devised assessment, provides us as coaches with invaluable knowledge about a player’s current level of performance and their potential risk and
-                        cause of injury. </p>
-                    <p> &bull; Players, parents and coaches will receive instant feedback regarding the quality and capacity of the players movement, along with any recommendations, advice and next steps regarding future training options.</p>
+                    <p> Begin the process of membership by booking your movement screen today. This self-devised assessment, provides us as coaches with invaluable knowledge about a player’s current level of performance and their potential risk and cause
+                        of injury. </p>
+                    <p> Players, parents and coaches will receive instant feedback regarding the quality and capacity of the players movement, along with any recommendations, advice and next steps regarding future training options.</p>
                     <p> Book Your Screening Now!</p>
                     <a href="https://user.playermade.co.uk/signup?productid=19">
                         <button type="button" class="btn btn-success btn-lg">BUY NOW</button>
@@ -100,7 +100,9 @@
                     in her strength and movement since she has been attending."(Leicester Ladies and England - Football)</p>
             </div>
         </section>
+
     </main>
+
     <footer class="footer">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2422.4957390967716!2d-1.1213161846456399!3d52.614885036946035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48776133a88e00b5%3A0xf97700213bbe7274!2sPlayermade!5e0!3m2!1sen!2suk!4v1579976390244!5m2!1sen!2suk"
             width="100%" frameborder="0" style="border:0;" allowfullscreen="">
