--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 
         <section id="home" data-module-id="screen">
             <img src="./img/logo.png" class="playermade" />
-            <p class="text">Playermade is an exclusive training club that specializes in the delivery of sports related training specific to juniors</p>
+            <div class="text-content">
+                <p>Playermade is an exclusive training club that specializes in the delivery of sports related training specific to juniors</p>
+            </div>
         </section>
 
         <section id="Become-Member">
@@ -76,8 +78,8 @@
             <div class="Training-text">
                 <p>With performance at the center of everything we do here, there is also an opportunity for individuals or sports teams who wish to access something even more bespoke and personalised to access something even more specific.</p>
                 <p>1:1 Training Provides the opportunity for players to focus their training in one or more specific areas:</p>
-                <p>Injury Prevention/Rehabilitation &bull; Speed and Explosiveness &bull; Reactiveness and Agility &bull; Endurance and Fitness</p>
-                <p>Skills; areas: Striking, kicking and punching &bull; Throwing and Bowling &bull; Any football related specific skill</p>
+                <p>&bull; Injury Prevention/Rehabilitation &bull; Speed and Explosiveness &bull; Reactiveness and Agility &bull; Endurance and Fitness</p>
+                <p>Skills; areas: &bull; Striking, kicking and punching &bull; Throwing and Bowling &bull; Any football related specific skill</p>
                 <h2>Team Training</h2>
                 <p>Complement your team training with this professional standard of performance based training. Experience a level of training that is relevant and expected from all major sports clubs around the world.</p>
             </div>
