--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
     <main>
 
         <section id="home" data-module-id="screen">
-            <img src="./img/logo.png" class="playermade" />
-            <div class="text-content">
+            <img typeof="foaf:Image" class="img-responsive" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="500" alt="">
+            <img typeof="foaf:Image" class="img-responsive" src="./img/black.jpg" width="501" height="500" alt="">
+            <div class="blackbox">
                 <p>Playermade is an exclusive training club that specializes in the delivery of sports related training specific to juniors</p>
             </div>
         </section>
