--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <main>
 
         <section id="home" data-module-id="screen">
-            <img typeof="foaf:Image" class="img-responsive" src="./img/logo.png" width="501" height="500" alt="">
-            <img typeof="foaf:Image" class="img-responsive" src="./img/black.jpg" width="501" height="500" alt="">
+            <img typeof="foaf:Image" class="img-responsive" src="./img/Playermade.jpg" width="501" height="600" alt="">
+            <img typeof="foaf:Image" class="img-responsive" src="./img/black.jpg" width="501" height="600" alt="">
             <div class="blackbox">
                 <p>Playermade is an exclusive training club that specializes in the delivery of sports related training specific to juniors</p>
             </div>
@@ -60,8 +60,8 @@
         </section>
 
         <section id="Movement-Screen">
-            <img typeof="foaf:Image" class="img-responsive" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="500" alt="">
-            <img typeof="foaf:Image" class="img-responsive" src="./img/black.jpg" width="501" height="500" alt="">
+            <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600" alt="">
+            <img typeof="foaf:Image" class="img-responsive2" src="./img/black.jpg" width="501" height="600" alt="">
             <!-- <div class="card">
                 <div class="card-text">
                     <h2>Movement Screen</h2>
@@ -78,8 +78,8 @@
         </section>
 
         <section id="Specialist-Training">
-            <img typeof="foaf:Image" class="img-responsive" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="500" alt="">
-            <img typeof="foaf:Image" class="img-responsive" src="./img/black.jpg" width="501" height="500" alt="">
+            <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600" alt="">
+            <img typeof="foaf:Image" class="img-responsive2" src="./img/black.jpg" width="501" height="600" alt="">
             <!-- <div class="Training-text">
                 <p>With performance at the center of everything we do here, there is also an opportunity for individuals or sports teams who wish to access something even more bespoke and personalised to access something even more specific.</p>
                 <p>1:1 Training Provides the opportunity for players to focus their training in one or more specific areas:</p>
@@ -91,8 +91,8 @@
         </section>
 
         <section id="Abstract">
-            <img typeof="foaf:Image" class="img-responsive" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="500" alt="">
-            <img typeof="foaf:Image" class="img-responsive" src="./img/black.jpg" width="501" height="500" alt="">
+            <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600" alt="">
+            <img typeof="foaf:Image" class="img-responsive2" src="./img/black.jpg" width="501" height="600" alt="">
             <!-- <div class="Training-text">
                 <p>Sports players need technical, tactical, and physical skills in order to be successful.</p>
                 <p>Both team and individulaised training programs have often been seen to focus on the technique and tactics aspects of the sport, at the expense of physical resources and qualities required such as strength, speed agility, power and endurance.</p>
@@ -101,8 +101,8 @@
         </section>
 
         <section id="Contact">
-            <img typeof="foaf:Image" class="img-responsive" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="500" alt="">
-            <img typeof="foaf:Image" class="img-responsive" src="./img/black.jpg" width="501" height="500" alt="">
+            <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600" alt="">
+            <img typeof="foaf:Image" class="img-responsive2" src="./img/black.jpg" width="501" height="600" alt="">
             <!-- <div class="Training-text">
                 <h2>Samantha Orton</h2>
                 <p>"My daughter is definitely stronger, more confident and fitter since joining Playermade, but most off all she enjoys going and always has a smile on her face after every session." (Blaby & Whetstone and Leicester Ladies - Football)</p>
