--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
         <section id="Movement-Screen">
             <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600" alt="">
             <img typeof="foaf:Image" class="img-responsive2" src="./img/black.jpg" width="501" height="600" alt="">
-            <!-- <div class="card">
-                <div class="card-text">
+            <div class="screenbox">
                     <h2>Movement Screen</h2>
                     <p> Begin the process of membership by booking your movement screen today. This self-devised assessment, provides us as coaches with invaluable knowledge about a player’s current level of performance and their potential risk and cause
                         of injury. </p>
@@ -72,44 +71,42 @@
                     <a href="https://user.playermade.co.uk/signup?productid=19">
                         <button type="button" class="btn btn-success btn-lg">BUY NOW</button>
                     </a>
-                </div>
-
-            </div> -->
+            </div>
         </section>
 
         <section id="Specialist-Training">
             <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600" alt="">
             <img typeof="foaf:Image" class="img-responsive2" src="./img/black.jpg" width="501" height="600" alt="">
-            <!-- <div class="Training-text">
+            <div class="screenbox2">
                 <p>With performance at the center of everything we do here, there is also an opportunity for individuals or sports teams who wish to access something even more bespoke and personalised to access something even more specific.</p>
                 <p>1:1 Training Provides the opportunity for players to focus their training in one or more specific areas:</p>
                 <p>&bull; Injury Prevention/Rehabilitation &bull; Speed and Explosiveness &bull; Reactiveness and Agility &bull; Endurance and Fitness</p>
                 <p>Skills; areas: &bull; Striking, kicking and punching &bull; Throwing and Bowling &bull; Any football related specific skill</p>
                 <h2>Team Training</h2>
                 <p>Complement your team training with this professional standard of performance based training. Experience a level of training that is relevant and expected from all major sports clubs around the world.</p>
-            </div> -->
+            </div>
         </section>
 
         <section id="Abstract">
             <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600" alt="">
             <img typeof="foaf:Image" class="img-responsive2" src="./img/black.jpg" width="501" height="600" alt="">
-            <!-- <div class="Training-text">
+            <div class="screenbox">
                 <p>Sports players need technical, tactical, and physical skills in order to be successful.</p>
                 <p>Both team and individulaised training programs have often been seen to focus on the technique and tactics aspects of the sport, at the expense of physical resources and qualities required such as strength, speed agility, power and endurance.</p>
                 <p>To maintain fitness and a longstanding participation in sport also requires training to include prevention strategies as well as flexibility and mobility training.</p>
-            </div> -->
+            </div>
         </section>
 
         <section id="Contact">
             <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600" alt="">
             <img typeof="foaf:Image" class="img-responsive2" src="./img/black.jpg" width="501" height="600" alt="">
-            <!-- <div class="Training-text">
+            <div class="screenbox">
                 <h2>Samantha Orton</h2>
                 <p>"My daughter is definitely stronger, more confident and fitter since joining Playermade, but most off all she enjoys going and always has a smile on her face after every session." (Blaby & Whetstone and Leicester Ladies - Football)</p>
                 <h2>Julie Smith</h2>
                 <p>"I have nothing but high praise for Playermade, our daughter has been attending their classes since the summer 2018 and has made new friends, grown in strength, speed and her balance has also improved. England have also noticed a big difference
                     in her strength and movement since she has been attending."(Leicester Ladies and England - Football)</p>
-            </div> -->
+            </div>
         </section>
 
     </main>
