removed old images waiting for new + updated logo

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <main>
 
         <section id="home" data-module-id="screen">
+            <img src="./img/playermade.png" class="playermade"/>
             <img typeof="foaf:Image" class="img-responsive" src="./img/black.jpg" width="501" height="600" alt="">
             <div class="blackbox">
                 <p>Playermade is an exclusive training club that specializes in the delivery of sports related training specific to juniors</p>
