--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <ul>
                 <li class="menu-item active"><a href="#home" data-scroll>Home</a></li>
                 <li class="menu-item"><a href="#Become-Member" data-scroll>Become a Member</a></li>
-                <li class="menu-item"><a href="#Movement-Screen" data-scroll>Movement Screen</a></li>
-                <li class="menu-item"><a href="#Specialist-Training" data-scroll>Specialist Training</a></li>
-                <li class="menu-item"><a href="#Abstract" data-scroll>Abstract</a></li>
-                <li class="menu-item"><a href="#Contact" data-scroll>Contact Us</a></li>
+                <li class="menu-item"><a href="#Movement-Screen" data-scroll>Screen</a></li>
+                <li class="menu-item"><a href="#Specialist-Training" data-scroll>Train</a></li>
+                <li class="menu-item"><a href="#Abstract" data-scroll>Testimonials</a></li>
+                <li class="menu-item"><a href="#Contact" data-scroll>Abstract</a></li>
                 <!-- <li class="menu-item"><a href="https://user.playermade.co.uk" data-scroll>Login</a></li> -->
             </ul>
         </nav>
