--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
                 <li class="menu-item"><a href="#Become-Member" data-scroll>Become a Member</a></li>
                 <li class="menu-item"><a href="#Movement-Screen" data-scroll>Screen</a></li>
                 <li class="menu-item"><a href="#Specialist-Training" data-scroll>Train</a></li>
-                <li class="menu-item"><a href="#Abstract" data-scroll>Testimonials</a></li>
-                <li class="menu-item"><a href="#Contact" data-scroll>Abstract</a></li>
+                <li class="menu-item"><a href="#Testimonials" data-scroll>Testimonials</a></li>
+                <li class="menu-item"><a href="#Abstract" data-scroll>Abstract</a></li>
+                <li class="menu-item"><a href="#Contact" data-scroll>Contact</a></li>
                 <!-- <li class="menu-item"><a href="https://user.playermade.co.uk" data-scroll>Login</a></li> -->
             </ul>
         </nav>
@@ -29,7 +30,6 @@
 
         <section id="home" data-module-id="screen">
             <img src="./img/playermade.png" class="playermade"/>
-            <img typeof="foaf:Image" class="img-responsive" src="./img/black.jpg" width="501" height="600" alt="">
             <div class="blackbox">
                 <p>Playermade is an exclusive training club that specializes in the delivery of sports related training specific to juniors</p>
             </div>
@@ -40,21 +40,21 @@
                 <div class="border-box">
                     <h1>SCREEN</h1>
                     <hr />
-                    <p>Identify your individual training needs, goals and pathway for future training through our in-house sports related strength and movement screen</p>
+                    <p>This physical assessment will enable us to identify your individual needs for training as well as highlight a group that would be most relevant to your current level of ability</p>
                     <div class="vl"></div>
                 </div>
 
                 <div class="border-box">
                     <h1>TRAIN</h1>
                     <hr/>
-                    <p>Chose the most suited and convenient means of training, whether that be through our weekly small group training system or bespoke 1:1 coaching</p>
+                    <p>Develop all aspects of your performance throught our training system and/or 1:1 coaching</p>
                     <div class="vl"></div>
                 </div>
 
                 <div class="border-box">
                     <h1>GAME</h1>
                     <hr/>
-                    <p>Take all that you have worked on into your game, showing higher levels of performance week in week out</p>
+                    <p>Transfer the skills that you have developed throught our training into your game, show higher levels of performance in key areas including strength, speed agility and power</p>
                 </div>
             </div>
         </section>
@@ -64,10 +64,7 @@
             <img typeof="foaf:Image" class="img-responsive2" src="./img/black.jpg" width="501" height="600" alt="">
             <div class="screenbox">
                     <h2>Movement Screen</h2>
-                    <p> Begin the process of membership by booking your movement screen today. This self-devised assessment, provides us as coaches with invaluable knowledge about a player’s current level of performance and their potential risk and cause
-                        of injury. </p>
-                    <p> Players, parents and coaches will receive instant feedback regarding the quality and capacity of the players movement, along with any recommendations, advice and next steps regarding future training options.</p>
-                    <p> Book Your Screening Now!</p>
+                    <p>Now that we know more about you as a player, we can share our findings with any attending adult(s) regarding the quality and capacity of your movement, as well as our recommendations for your TRAIN options</p>
                     <a href="https://user.playermade.co.uk/signup?productid=19">
                         <button type="button" class="btn btn-success btn-lg">BUY NOW</button>
                     </a>
@@ -78,26 +75,13 @@
             <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600" alt="">
             <img typeof="foaf:Image" class="img-responsive2" src="./img/black.jpg" width="501" height="600" alt="">
             <div class="screenbox2">
-                <p>With performance at the center of everything we do here, there is also an opportunity for individuals or sports teams who wish to access something even more bespoke and personalised to access something even more specific.</p>
-                <p>1:1 Training Provides the opportunity for players to focus their training in one or more specific areas:</p>
-                <p>&bull; Injury Prevention/Rehabilitation &bull; Speed and Explosiveness &bull; Reactiveness and Agility &bull; Endurance and Fitness</p>
-                <p>Skills; areas: &bull; Striking, kicking and punching &bull; Throwing and Bowling &bull; Any football related specific skill</p>
                 <h2>Team Training</h2>
                 <p>Complement your team training with this professional standard of performance based training. Experience a level of training that is relevant and expected from all major sports clubs around the world.</p>
+                <p>Perfect for in-season or preseason, use your sessions to get fit for the start of the season, or focus on one or more aspect of performance, such as strength, speed, agility or power.</p>
             </div>
         </section>
 
-        <section id="Abstract">
-            <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600" alt="">
-            <img typeof="foaf:Image" class="img-responsive2" src="./img/black.jpg" width="501" height="600" alt="">
-            <div class="screenbox">
-                <p>Sports players need technical, tactical, and physical skills in order to be successful.</p>
-                <p>Both team and individulaised training programs have often been seen to focus on the technique and tactics aspects of the sport, at the expense of physical resources and qualities required such as strength, speed agility, power and endurance.</p>
-                <p>To maintain fitness and a longstanding participation in sport also requires training to include prevention strategies as well as flexibility and mobility training.</p>
-            </div>
-        </section>
-
-        <section id="Contact">
+        <section id="Testimonials">
             <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600" alt="">
             <img typeof="foaf:Image" class="img-responsive2" src="./img/black.jpg" width="501" height="600" alt="">
             <div class="screenbox">
@@ -109,14 +93,33 @@
             </div>
         </section>
 
+        <section id="Abstract">
+            <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600" alt="">
+            <img typeof="foaf:Image" class="img-responsive2" src="./img/black.jpg" width="501" height="600" alt="">
+            <div class="screenbox">
+                 <p>Competitive sports require players to be able to perform technical, tactical, and physical skills in order to be successful.</p>
+                 <p>Sports training focuses highly on the techniques and tactics associated with sport, very often at the expense of more athlete centred training.</p>
+                 <p>To be successful in sport not only requires those sports specific skills, but also those physical resources that contributes towards efficient movement.</p>
+                 <p>Our strategy focuses on combining the most relevant and purposeful stages of sports specific training and strength & conditioning.</p>
+                 <p>Our training aims to maximise performance and unlock the true potential of junior athletes. (Playermade classify junior’s as those who are under the age of 18).</p>
+                 <p>All training is based upon scientific approaches and research surrounding the athletic development of junior athletes in sport.</p>
+                 <p>Attendance at Playermade will see players increase their athletic ability and capabilities in all areas relevant to their game.</p>
+                 <p>With a wealth of experience and broad understanding of not only junior specific coaching but coaching in general, Playermade has seen through its doors premier league football players as well as the World cup winning Australian Women’s Cricket Team. </p>
+            </div>
+        </section>
+
+        <section id="Contact">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2422.4957390967716!2d-1.1213161846456399!3d52.614885036946035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48776133a88e00b5%3A0xf97700213bbe7274!2sPlayermade!5e0!3m2!1sen!2suk!4v1579976390244!5m2!1sen!2suk"
+            width="100%" frameborder="0" style="border:0;" allowfullscreen="">
+            </iframe>
+        </section>
+
     </main>
 
-    <footer class="footer">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2422.4957390967716!2d-1.1213161846456399!3d52.614885036946035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48776133a88e00b5%3A0xf97700213bbe7274!2sPlayermade!5e0!3m2!1sen!2suk!4v1579976390244!5m2!1sen!2suk"
-            width="100%" frameborder="0" style="border:0;" allowfullscreen="">
-    </iframe>
+    <!-- <footer class="footer">
+        
         <p>&copy; Playermade</p>
-    </footer>
+    </footer> -->
 
     <script src="js/fastclick.js"></script>
     <script src="js/scroll.js"></script>
