--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="border-box">
                     <h1>TRAIN</h1>
                     <hr/>
-                    <p>Develop all aspects of your performance throught our training system and/or 1:1 coaching</p>
+                    <p>Develop all aspects of your performance throught our training system and/or 1:1 coaching. Develop all aspects of your performance throught our training system and/or 1:1 coaching </p>
                     <div class="vl"></div>
                 </div>
 
