--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
         </section>
 
         <section id="Specialist-Training">
-            <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600" alt="">
-            <img typeof="foaf:Image" class="img-responsive2" src="./img/black.jpg" width="501" height="600" alt="">
+            <div class="video">
+              <video controls="controls" width="100%" name="Video" src="./img/Player Made 1.mov"></video>  
+            </div>
             <div class="screenbox2">
                 <h2>Team Training</h2>
                 <p>Complement your team training with this professional standard of performance based training. Experience a level of training that is relevant and expected from all major sports clubs around the world.</p>
