--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <section id="Specialist-Training">
             <div class="video">
-              <video controls="controls" width="100%" name="Video" src="./img/Player Made 1.mov"></video>  
+              <video controls="controls" width="100%" name="Video" src="./img/Player Made 1.mp4"></video>  
             </div>
             <div class="screenbox2">
                 <h2>Team Training</h2>
