styles resizing font size

--- a/index.html
+++ b/index.html
@@ -43,14 +43,12 @@
                     <p>This physical assessment will enable us to identify your individual needs for training as well as highlight a group that would be most relevant to your current level of ability</p>
                     <div class="vl"></div>
                 </div>
-
                 <div class="border-box">
                     <h1>TRAIN</h1>
                     <hr/>
-                    <p>Develop all aspects of your performance throught our training system and/or 1:1 coaching. Develop all aspects of your performance throught our training system and/or 1:1 coaching </p>
-                    <div class="vl"></div>
+                    <p>Develop all aspects of your performance throught our training system and/or 1:1 coaching.</p>
+                    <div class="vl2"></div>
                 </div>
-
                 <div class="border-box">
                     <h1>GAME</h1>
                     <hr/>
@@ -73,7 +71,7 @@
 
         <section id="Specialist-Training">
             <div class="video">
-              <video controls="controls" width="100%" name="Video" src="./img/Player Made 1.mp4"></video>  
+              <video controls="controls" width="100%" name="Video" src="./img/Player Made 1.mp4"></video> 
             </div>
             <div class="screenbox2">
                 <h2>Team Training</h2>
@@ -85,19 +83,19 @@
         <section id="Testimonials">
             <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600" alt="">
             <img typeof="foaf:Image" class="img-responsive2" src="./img/black.jpg" width="501" height="600" alt="">
-            <div class="screenbox">
+            <div class="screenbox4">
                 <h2>Samantha Orton</h2>
                 <p>"My daughter is definitely stronger, more confident and fitter since joining Playermade, but most off all she enjoys going and always has a smile on her face after every session." (Blaby & Whetstone and Leicester Ladies - Football)</p>
-                <h2>Julie Smith</h2>
+                <!-- <h2>Julie Smith</h2>
                 <p>"I have nothing but high praise for Playermade, our daughter has been attending their classes since the summer 2018 and has made new friends, grown in strength, speed and her balance has also improved. England have also noticed a big difference
-                    in her strength and movement since she has been attending."(Leicester Ladies and England - Football)</p>
+                    in her strength and movement since she has been attending."(Leicester Ladies and England - Football)</p> -->
             </div>
         </section>
 
         <section id="Abstract">
             <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600" alt="">
             <img typeof="foaf:Image" class="img-responsive2" src="./img/black.jpg" width="501" height="600" alt="">
-            <div class="screenbox">
+            <div class="screenbox3">
                  <p>Competitive sports require players to be able to perform technical, tactical, and physical skills in order to be successful.</p>
                  <p>Sports training focuses highly on the techniques and tactics associated with sport, very often at the expense of more athlete centred training.</p>
                  <p>To be successful in sport not only requires those sports specific skills, but also those physical resources that contributes towards efficient movement.</p>
