--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
 
         <section id="Specialist-Training">
             <div class="video">
+              <h1>Group Training</h1>
               <video controls="controls" width="100%" name="Video" src="./img/Player Made 1.mp4"></video>
+              <h1>1:1 Training</h1>
               <video controls="controls" width="100%" name="Video" src="./img/Player Made 1.mp4"></video>
             </div>
             <div class="screenbox2">
