size and move to top

--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
                 <div class="border-box">
                     <h1>SCREEN</h1>
                     <hr />
-                    <p>This physical assessment will enable us to identify your individual needs for training as well as highlight a group that would be most relevant to your current level of ability</p>
+                    <p>A physical assessment that helps us to Identify your strength and weakness in movement, as well as any training group that would suit your current level of ability</p>
                     <div class="vl"></div>
                 </div>
                 <div class="border-box">
                     <h1>TRAIN</h1>
                     <hr/>
-                    <p>Develop all aspects of your performance throught our training system and/or 1:1 coaching.</p>
+                    <p>Develop all aspects of your performance throught our group training system and/or 1:1 coaching.</p>
                     <div class="vl2"></div>
                 </div>
                 <div class="border-box">
                     <h1>GAME</h1>
                     <hr/>
-                    <p>Transfer the skills that you have developed throught our training into your game, show higher levels of performance in key areas including strength, speed agility and power</p>
+                    <p>Transfer the skills that you have developed throught training into your game, more speed, more strength and better agility</p>
                 </div>
             </div>
         </section>
@@ -70,11 +70,12 @@
 
         <section id="Specialist-Training">
             <div class="video">
-              <h1>Group Training</h1>
-              <video controls="controls" width="100%" name="Video" src="./img/Player Made 1.mp4"></video>
-              <h1>1:1 Training</h1>
-              <video controls="controls" width="100%" name="Video" src="./img/Player Made 1.mp4"></video>
+             <h2>Group Training</h2>
+            <video controls="controls" width="100%" name="Video" src="./img/Player Made 1.mp4"></video>
+             <h2>1:1 Training</h2>
+            <video controls="controls" width="100%" name="Video" src="./img/Player Made 1.mp4"></video>
             </div>
+            
             <div class="screenbox2">
                 <h2>Team Training</h2>
                 <p>Complement your team training with this professional standard of performance based training. Experience a level of training that is relevant and expected from all major sports clubs around the world.</p>
