--- a/index.html
+++ b/index.html
@@ -122,6 +122,28 @@
         </section>
 
         <section id="Contact">
+            <div class="social">
+                <h2 class="social-title"> Visit Our Socials</h2>
+                <div class="social-row">
+                    <a target="_blank" href="https://www.facebook.com/playermadeuk/">
+                <img typeof="foaf:Image" class="img-responsive" src="https://www.homesense.com/sites/homesense/files/facebook.png" width="13" height="23" alt="">
+                    </a>  
+                </div>
+                
+                <div class="social-row">
+                    <a target="_blank" href="https://www.instagram.com/playermadeuk/">
+                <img typeof="foaf:Image" class="img-responsive" src="https://www.homesense.com/sites/homesense/files/instagram.png" width="24" height="23" alt="">
+                    </a>  
+                </div>
+            </div>
+            <div class="contact-text">
+                <p>Playermade</p>
+                <p>168 Avenue Road Extension</p>
+                <p>Leicester, LE2 3EJ</p>
+                <br/>
+                <p>Email: info@playermade.co.uk</p>
+                <p>Telephone: 0116 210 3621</p>
+            </div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2422.4957390967716!2d-1.1213161846456399!3d52.614885036946035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48776133a88e00b5%3A0xf97700213bbe7274!2sPlayermade!5e0!3m2!1sen!2suk!4v1579976390244!5m2!1sen!2suk"
             width="100%" frameborder="0" style="border:0;" allowfullscreen="">
             </iframe>
