--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </section>
 
         <section id="Movement-Screen">
-            <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600" alt="">
+            <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600"  SameSite=none alt="">
             <div class="screenbox">
                     <h2>Movement Screen</h2>
                     <p>Now that we know more about you as a player, we can share our findings with any attending adult(s) regarding the quality and capacity of your movement, as well as our recommendations for your TRAIN options</p>
@@ -84,7 +84,7 @@
         </section>
 
         <section id="Testimonials">
-            <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600" alt="">
+            <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" SameSite=none width="501" height="600" alt="">
             <div class="slideshow-container">
                 <div class="mySlides">
                   <q>"My daughter is definitely stronger, more confident and fitter since joining Playermade, but most off all she enjoys going and always has a smile on her face after every session."</q>
