--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="border-box">
                     <h1>TRAIN</h1>
                     <hr/>
-                    <p>Develop all aspects of your performance throught our group training system and/or 1:1 coaching.</p>
+                    <p>Increase all aspects of your performance throught our group training system and/or 1:1 coaching</p>
                     <div class="vl2"></div>
                 </div>
                 <div class="border-box">
@@ -58,10 +58,10 @@
         </section>
 
         <section id="Movement-Screen">
-            <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600"  SameSite=none alt="">
+            <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600"  alt="">
             <div class="screenbox">
                     <h2>Movement Screen</h2>
-                    <p>Now that we know more about you as a player, we can share our findings with any attending adult(s) regarding the quality and capacity of your movement, as well as our recommendations for your TRAIN options</p>
+                    <p>Once we know more about you as a player, we can share our findings with any attending adult(s). Highlighting the quality and capacity of your movement, as well as any recommendations for your TRAIN options.</p>
                     <a href="https://user.playermade.co.uk/signup?productid=19">
                         <button type="button" class="btn btn-success btn-lg">BUY NOW</button>
                     </a>
@@ -78,13 +78,13 @@
             
             <div class="screenbox2">
                 <h2>Team Training</h2>
-                <p>Complement your team training with this professional standard of performance based training. Experience a level of training that is relevant and expected from all major sports clubs around the world.</p>
-                <p>Perfect for in-season or preseason, use your sessions to get fit for the start of the season, or focus on one or more aspect of performance, such as strength, speed, agility or power.</p>
+                <p>Complement your sports specific team training with this performance based training. Experience a professional standard of training that is worthy of any major sports clubs from around the world. </p>
+                <p>Perfect for in-season or preseason, use your sessions to get fit for the start of the season, or focus on one or more aspects of performance, such as strength, speed, agility or power. </p>
             </div>
         </section>
 
         <section id="Testimonials">
-            <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" SameSite=none width="501" height="600" alt="">
+            <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600" alt="">
             <div class="slideshow-container">
                 <div class="mySlides">
                   <q>"My daughter is definitely stronger, more confident and fitter since joining Playermade, but most off all she enjoys going and always has a smile on her face after every session."</q>
@@ -113,7 +113,7 @@
                  <h1>Abstract</h1>
                  <p>Competitive sports require players to be able to perform technical, tactical, and physical skills in order to be successful.</p>
                  <p>Sports training focuses highly on the techniques and tactics associated with sport, very often at the expense of more athlete centred training.</p>
-                 <p>To be successful in sport not only requires those sports specific skills, but also those physical resources that contributes towards efficient movement.</p>
+                 <p>To be successful in sport not only requires those sports specific skills, but also those physical resources that contribute towards efficient movement.</p>
                  <p>Our strategy focuses on combining the most relevant and purposeful stages of sports specific training and strength & conditioning.</p>
                  <p>Our training aims to maximise performance and unlock the true potential of junior athletes. (Playermade classify junior’s as those who are under the age of 18).</p>
                  <p>All training is based upon scientific approaches and research surrounding the athletic development of junior athletes in sport.</p>
