remove quotes as there are already there

--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
             <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600" alt="">
             <div class="slideshow-container">
                 <div class="mySlides">
-                  <q>"My daughter is definitely stronger, more confident and fitter since joining Playermade, but most off all she enjoys going and always has a smile on her face after every session."</q>
+                  <q>My daughter is definitely stronger, more confident and fitter since joining Playermade, but most off all she enjoys going and always has a smile on her face after every session.</q>
                   <p class="author">- Samantha Orton (Blaby & Whetstone and Leicester Ladies)</p>
                 </div>
 
                 <div class="mySlides">
-                  <q>"I have nothing but high praise for Playermade, our daughter has been attending their classes since the summer 2018 and has made new friends, grown in strength, speed and her balance has also improved. England have also noticed a big difference
-                    in her strength and movement since she has been attending."</q>
+                  <q>I have nothing but high praise for Playermade, our daughter has been attending their classes since the summer 2018 and has made new friends, grown in strength, speed and her balance has also improved. England have also noticed a big difference
+                    in her strength and movement since she has been attending.</q>
                   <p class="author">- Julie Smith (Leicester Ladies and England)</p>
                 </div>
                 
