--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="border-box">
                     <h1>SCREEN</h1>
                     <hr />
-                    <p>A physical assessment that helps us to Identify your strength and weakness, as well as any training group that would suit your current level of ability</p>
+                    <p>A physical assessment that helps us to Identify your strengths and weakness.</p>
                     <div class="vl"></div>
                 </div>
                 <div class="border-box">
