--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="border-box">
                     <h1>TRAIN</h1>
                     <hr/>
-                    <p>Increase all aspects of your performance throught our group training system and/or 1:1 coaching</p>
+                    <p>Choose a training method to Increase all aspects of your performance throught our group training system and/or 1:1 coaching.</p>
                     <div class="vl2"></div>
                 </div>
                 <div class="border-box">
