--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600"  alt="">
             <div class="screenbox">
                     <h2>Movement Screen</h2>
-                    <p>Once we know more about you as a player, we can share our findings with any attending adult(s). Highlighting the quality and capacity of your movement, as well as any recommendations for your TRAIN options.</p>
+                    <p>Once we know more about you as a player we can share our findings with any attending adult(s). Highlighting the quality and capacity of your movement, as well as any recommendations for your TRAIN options.</p>
                     <a href="https://user.playermade.co.uk/signup?productid=19">
                         <button type="button" class="btn btn-success btn-lg">BUY NOW</button>
                     </a>
