--- a/index.html
+++ b/index.html
@@ -76,11 +76,8 @@
              <h2>1:1 Training</h2>
             <video controls="controls" width="100%" name="Video" src="./img/Player Made 1.mp4"></video>
             </div>
-            
-            <div class="screenbox2">
-                <h2>Team Training</h2>
-                <p>Complement your sports specific team training with this performance based training. Experience a professional standard of training that is worthy of any major sports clubs from around the world. </p>
-                <p>Perfect for in-season or preseason, use your sessions to get fit for the start of the season, or focus on one or more aspects of performance, such as strength, speed, agility or power. </p>
+            <h2>Performance Testing</h2>
+            <video controls="controls" width="100%" name="Video" src="./img/Player Made 1.mp4"></video>
             </div>
         </section>
 
