--- a/index.html
+++ b/index.html
@@ -70,13 +70,24 @@
         </section>
 
         <section id="Specialist-Training">
-            <div class="video">
-             <h2>Group Training</h2>
-            <video controls="controls" width="100%" name="Video" src="./img/Player Made 1.mp4"></video>
-             <h2>1:1 Training</h2>
-            <video controls="controls" width="100%" name="Video" src="./img/Player Made 1.mp4"></video>
-            <h2>Performance Testing</h2>
-            <video controls="controls" width="100%" name="Video" src="./img/Player Made 1.mp4"></video>
+            <div class="Member-text">
+                <div class="border-box">
+                    <h1>SCREEN</h1>
+                    <hr />
+                    <p>A physical assessment that helps Identify your strengths and weakness. Identify a training group to suit your current level of ability</p>
+                    <div class="vl"></div>
+                </div>
+                <div class="border-box">
+                    <h1>TRAIN</h1>
+                    <hr/>
+                    <p>Choose a training method to Increase all aspects of your performance throught our group training system and/or 1:1 coaching.</p>
+                    <div class="vl2"></div>
+                </div>
+                <div class="border-box">
+                    <h1>GAME</h1>
+                    <hr/>
+                    <p>Transfer the skills that you have developed throught training into your game, more speed, more strength and better agility</p>
+                </div>
             </div>
         </section>
 
