--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </section>
 
         <section id="Specialist-Training">
-            <div class="Member-text">
+            <div class="Member-text2">
                 <div class="border-box">
                     <h1>Group Training</h1>
                     <hr />
