--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li class="menu-item"><a href="#Become-Member" data-scroll>Become a Member</a></li>
                 <li class="menu-item"><a href="#Movement-Screen" data-scroll>Screen</a></li>
                 <li class="menu-item"><a href="#Specialist-Training" data-scroll>Train</a></li>
+                <li class="menu-item"><a href="#Train" data-scroll>Train</a></li>
                 <li class="menu-item"><a href="#Testimonials" data-scroll>Testimonials</a></li>
                 <li class="menu-item"><a href="#Abstract" data-scroll>Abstract</a></li>
                 <li class="menu-item"><a href="#Contact" data-scroll>Contact</a></li>
@@ -86,6 +87,18 @@
                     <hr/>
                     <video controls="controls" width="100%" name="Video" src="./img/Player Made 1.mp4"></video>
                 </div>
+            </div>
+        </section>
+        
+        <section id="Train">
+            <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600"  alt="">
+            <div class="screenbox">
+                    <hr>
+                    <h2>Movement Screen</h2>
+                    <p>Once we know more about you as a player we can share our findings with any attending adult(s). Highlighting the quality and capacity of your movement, as well as any recommendations for your TRAIN options.</p>
+                    <a href="https://user.playermade.co.uk/signup?productid=19">
+                        <button type="button" class="btn btn-success btn-lg">BUY NOW</button>
+                    </a>
             </div>
         </section>
 
