--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
             <div class="screenbox">
                     <hr>
                     <h2>Team Training</h2>
-                    <p>Once we know more about you as a player we can share our findings with any attending adult(s). Highlighting the quality and capacity of your movement, as well as any recommendations for your TRAIN options.</p>
+                    <p>Complement your sports specific team training with this performance based training. Experience a professional standard of training that is worthy of any major sports clubs from around the world. 
+                        Perfect for in-season or preseason, use your sessions to get fit for the start of the season, or focus on one or more aspects of performance, such as strength, speed, agility or power.</p>
             </div>
         </section>
 
         <section id="Testimonials">
-            <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600" alt="">
             <div class="slideshow-container">
                 <div class="mySlides">
                   <q>My daughter is definitely stronger, more confident and fitter since joining Playermade, but most off all she enjoys going and always has a smile on her face after every session.</q>
